[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/hit.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sprites/enemy.png" type="Texture" id=3]

[node name="Enemy" type="Area2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 1 )
VELOCITY = 80

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Collision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -4, -5, -3, -7, -3, -7, 1, -7, 3, -7, 5, -5, 5, 5, 3, 7, -3, 7, -4, 5, -2, 3, -5, 2, -5, -2, -2, -3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, 4.17233e-07 )
scale = Vector2( 0.6, 0.8 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
